# python_flask_portfolio

./: LICENSE  pyproject.toml
flaskapp/: app.py
flaskapp/static/: style.css
flaskapp/templates/: _wrapper.html  default.html  work.html
